<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <HorizontalScrollView
        android:id="@+id/sv_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ll_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_lion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lion"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/btn_elephant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/elephant"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/btn_dog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dog"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/btn_cat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cat"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/btn_sheep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sheep"
                android:layout_marginEnd="8dp"/>

        </LinearLayout>
    </HorizontalScrollView>

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/sv_buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>